k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: app
  template:
    metadata: 
      labels:
        app: app
    spec: 
      containers:
        ### NextJs fronend
        - name: client-api
          image: YOUR_IMAGE_HERE
          imagePullPolicy: Always
          ports: 
            - containerPort: 3000
        - name: server-api
          image: YOUR_IMAGE_HERE
          imagePullPolicy: Always
          ports:
            - containerPort: 5000  #container exposes
      imagePullSecrets:
      - name: topsecret  # ensure this secret exists for pulling private images
