k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: app  #  match the labels in the Deployment
  ports:
    - name: client-api
      port: 3000          # port exposed by the service
      targetPort: 3000    # port the pod listen
    - name: server-api
      port: 5000          # port exposed by the service
      targetPort: 5000    # port the pod listen
